tegel/src/components/button/button.scss
@import './button-theme-vars.scss';

.sdds-on-white-bg {
  --sdds-btn-primary-background-disabled: var(--sdds-btn-primary-on-white-background-disabled);
  --sdds-btn-danger-background-disabled: var(--sdds-btn-danger-on-white-background-disabled);
}

$btn-lg-height: 14rem;
$btn-md-height: 12rem;
$btn-sm-height: 10rem;
$btn-xs-height: 8rem;
$btn-sm-only-icon-padding: 11px;
$btn-md-only-icon-padding: 13px;
$btn-lg-only-icon-padding: 17px;
$types: (primary, secondary, ghost, danger);
$props: (background, border-color, color, outline-color);
$iconProps: (fill, color);

@mixin button-base {
  font: var(--sdds-detail-02);
  letter-spacing: var(--sdds-detail-02-ls);
  display: flex;
  align-items: center;
  border-radius: 1rem;
  border: none;
  box-shadow: none;
  position: relative;
  text-decoration: none;
  cursor: pointer;
}

.sdds-btn.sdds-btn-primary .sdds-btn-icon {
  fill: var(--sdds-btn-primary-icon-fill);
  color: var(--sdds-btn-primary-icon-color);
  font-size: 4rem; //16px
}

.sdds-btn {
  @include button-base;

  height: $btn-lg-height;
  padding: var(--sdds-spacing-element-20);
  border: 1px solid;

  &:disabled,
  &.disabled {
    cursor: unset;
  }

  &:focus {
    // TODO: decide on what tod o with these @include sdds-focus-state;
    outline: 2px solid var(--sdds-blue-400);
    outline-offset: -2px;
  }

  span.sdds-btn-text + .sdds-btn-icon {
    margin-left: var(--sdds-spacing-element-16);
    width: 20px;
    height: 20px;
    line-height: 0;
  }

  &.sdds-btn-xs {
    padding: var(--sdds-spacing-element-8);
    height: $btn-xs-height;

    &:focus {
      // TODO: decide on what tod o with these @include sdds-focus-state;
      outline: 2px solid var(--sdds-blue-400);
      outline-offset: -2px;
    }
  }

  &.sdds-btn-sm {
    padding: var(--sdds-spacing-element-12);
    height: $btn-sm-height;

    &.sdds-btn-only-icon {
      padding: $btn-sm-only-icon-padding;
    }

    &:focus {
      // TODO: decide on what tod o with these @include sdds-focus-state;
      outline: 2px solid var(--sdds-blue-400);
      outline-offset: -2px;
    }

    span.sdds-btn-text + .sdds-btn-icon {
      margin: unset;
      margin-left: var(--sdds-spacing-element-24);
      width: 16px;
      height: 16px;
    }
  }

  &.sdds-btn-md {
    padding: var(--sdds-spacing-element-16);
    height: $btn-md-height;

    &.sdds-btn-only-icon {
      padding: $btn-md-only-icon-padding;
    }

    &:focus {
      // TODO: decide on what tod o with these @include sdds-focus-state;
      outline: 2px solid var(--sdds-blue-400);
      outline-offset: -2px;
    }

    span.sdds-btn-text + .sdds-btn-icon {
      margin: unset;
      margin-left: var(--sdds-spacing-element-20);
    }
  }

  &.sdds-btn-lg {
    padding: var(--sdds-spacing-element-20);
    height: $btn-lg-height;

    &.sdds-btn-only-icon {
      padding: $btn-lg-only-icon-padding;
    }

    &:focus {
      // TODO: decide on what tod o with these @include sdds-focus-state;
      outline: 2px solid var(--sdds-blue-400);
      outline-offset: -2px;
    }

    span.sdds-btn-text + .sdds-btn-icon {
      margin: unset;
      margin-left: 7rem;
    }
  }

  &.sdds-btn-fullbleed {
    width: inherit;
    display: flex;
    justify-content: center;

    .sdds-btn-icon,
    &.sdds-btn-icon {
      margin-left: var(--sdds-spacing-element-8);
    }
  }

  span.sdds-btn-text {
    align-self: baseline;
  }

  @each $type in $types {
    &.sdds-btn-#{$type} {
      @each $prop in $props {
        #{$prop}: var(--sdds-btn-#{$type}-#{$prop});
      }

      .sdds-btn-icon {
        @each $prop in $iconProps {
          fill: var(--sdds-btn-icon-#{$type}-#{$prop});
          color: var(--sdds-btn-icon-#{$type}-#{$prop});
        }

        font-size: 4rem; //16px
      }

      &:hover {
        @each $prop in $props {
          #{$prop}: var(--sdds-btn-#{$type}-#{$prop}-hover);
        }

        .sdds-btn-icon {
          @each $prop in $iconProps {
            fill: var(--sdds-btn-icon-#{$type}-#{$prop}-hover);
            color: var(--sdds-btn-icon-#{$type}-#{$prop}-hover);
          }
        }
      }

      &:focus {
        @each $prop in $props {
          #{$prop}: var(--sdds-btn-#{$type}-#{$prop}-focus);
        }

        .sdds-btn-icon {
          @each $prop in $iconProps {
            fill: var(--sdds-btn-icon-#{$type}-#{$prop}-focus);
            color: var(--sdds-btn-icon-#{$type}-#{$prop}-focus);
          }
        }
      }

      &:active,
      &.active {
        @each $prop in $props {
          #{$prop}: var(--sdds-btn-#{$type}-#{$prop}-active);
        }
      }

      &.disabled,
      &:disabled {
        @each $prop in $props {
          cursor: not-allowed;
          #{$prop}: var(--sdds-btn-#{$type}-#{$prop}-disabled);

          .sdds-btn-icon,
          &.sdds-btn-icon {
            color: var(--sdds-grey-300);
          }
        }
      }
    }
  }
}

:host(sdds-button) {
  display: flex;
  align-items: center;

  ::slotted([slot='icon']) {
    width: var(--sdds-spacing-element-20);
    height: var(--sdds-spacing-element-20);
  }

  .sdds-btn-sm {
    ::slotted([slot='icon']) {
      width: var(--sdds-spacing-element-16);
      height: var(--sdds-spacing-element-16);
    }
  }
}

:host(sdds-button[fullbleed]) {
  width: inherit;
  justify-content: center;
}

:host(sdds-button[onlyIcon]) {
  .sdds-btn-sm {
    padding: $btn-sm-only-icon-padding;
  }

  .sdds-btn-md {
    padding: $btn-md-only-icon-padding;
  }

  .sdds-btn-lg {
    padding: $btn-lg-only-icon-padding;
  }
}

:host(sdds-button:not([onlyIcon])) {
  display: flex;
  align-items: center;

  .sdds-btn-sm {
    ::slotted([slot='icon']) {
      margin-left: var(--sdds-spacing-element-24);
      width: var(--sdds-spacing-element-16);
      height: var(--sdds-spacing-element-16);
    }
  }

  .sdds-btn-md {
    ::slotted([slot='icon']) {
      margin-left: var(--sdds-spacing-element-20);
      width: var(--sdds-spacing-element-20);
      height: var(--sdds-spacing-element-20);
    }
  }

  .sdds-btn-lg {
    ::slotted([slot='icon']) {
      // TODO - This should be a var value
      margin-left: 28px;
      width: var(--sdds-spacing-element-20);
      height: var(--sdds-spacing-element-20);
    }
  }
}

